--- a/skillmap/mainfiles/index.html
+++ b/skillmap/mainfiles/index.html
@@ -245,7 +245,7 @@
         <nav>
         <div class="logo">Skill<span>Map</span></div>
         <div class="nav-links">
-            <a href="skillmap.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#about">About us</a>
             <a href="courses.html">Courses</a>
             <a href="#contact">Contact</a>
