--- a/skillmap/mainfiles/feedback.html
+++ b/skillmap/mainfiles/feedback.html
@@ -119,10 +119,10 @@
     <nav>
         <div class="logo">Skill<span>Map</span></div>
         <div class="nav-links">
-            <a href="skillmap.html">Home</a>
-            <a href="skillmap.html">About us</a>
+            <a href="index.html">Home</a>
+            <a href="index.html">About us</a>
             <a href="courses.html">Courses</a>
-            <a href="skillmap.html">Contact</a>
+            <a href="index.html">Contact</a>
             <a href="#">Feedback</a>
         </div>
     </nav>
