--- a/skillmap/mainfiles/courses.html
+++ b/skillmap/mainfiles/courses.html
@@ -11,10 +11,10 @@
     <nav>
         <div class="logo">Skill<span>Map</span></div>
         <div class="nav-links">
-            <a href="skillmap.html">Home</a>
-            <a href="skillmap.html">About us</a>
+            <a href="index.html">Home</a>
+            <a href="index.html">About us</a>
             <a href="courses.html">Courses</a>
-            <a href="skillmap.html">Contact</a>
+            <a href="index.html">Contact</a>
             <a href="./feedback.html">Feedback</a>
         </div>
     </nav>
